--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,9 +65,11 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\AverageScore.cs" />
     <Compile Include="Assets\Scripts\Builder.cs" />
+    <Compile Include="Assets\Scripts\BuildingLocationsManager.cs" />
     <Compile Include="Assets\Scripts\CameraMovement.cs" />
     <Compile Include="Assets\Scripts\GlobalScaler.cs" />
-    <Compile Include="Assets\Scripts\Grid.cs" />
+    <Compile Include="Assets\Scripts\GridCreator.cs" />
+    <Compile Include="Assets\Scripts\GridInputHandler.cs" />
     <Compile Include="Assets\Scripts\GridInteraction.cs" />
     <Compile Include="Assets\Scripts\LightCalculator.cs" />
     <Compile Include="Assets\Scripts\LightLevel.cs" />
