Back to a functioning state, bugs still need fixing

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -72,21 +72,23 @@
     <Compile Include="Assets\Scripts\InputHandlers\Menu.cs" />
     <Compile Include="Assets\Scripts\InputHandlers\ObjectDataDisplayer.cs" />
     <Compile Include="Assets\Scripts\InputHandlers\ProcessTracker.cs" />
-    <Compile Include="Assets\Scripts\ParticleSwarmOptimizer\AverageScore.cs" />
-    <Compile Include="Assets\Scripts\ParticleSwarmOptimizer\EnergyGenerationCalculator.cs" />
-    <Compile Include="Assets\Scripts\ParticleSwarmOptimizer\LightCalculator.cs" />
+    <Compile Include="Assets\Scripts\ParticleSwarmOptimizer\AverageEnergyGeneration.cs" />
     <Compile Include="Assets\Scripts\ParticleSwarmOptimizer\LightLevel.cs" />
     <Compile Include="Assets\Scripts\ParticleSwarmOptimizer\LuminairePositionsCalculator.cs" />
-    <Compile Include="Assets\Scripts\ParticleSwarmOptimizer\ParticleSimulator.cs" />
+    <Compile Include="Assets\Scripts\ParticleSwarmOptimizer\ResourceReferencesHub.cs" />
+    <Compile Include="Assets\Scripts\ParticleSwarmOptimizer\ResultsDataDisplay.cs" />
     <Compile Include="Assets\Scripts\ParticleSwarmOptimizer\SolutionParticle.cs" />
     <Compile Include="Assets\Scripts\ParticleSwarmOptimizer\SwarmOptimizer.cs" />
     <Compile Include="Assets\Scripts\ScaleText.cs" />
     <Compile Include="Assets\Scripts\Singletons\BuildingLocationsManager.cs" />
     <Compile Include="Assets\Scripts\Singletons\DataParser.cs" />
+    <Compile Include="Assets\Scripts\Singletons\EnergyGenerationCalculator.cs" />
     <Compile Include="Assets\Scripts\Singletons\GlobalScaler.cs" />
+    <Compile Include="Assets\Scripts\Singletons\IlluminanceCalculator.cs" />
     <Compile Include="Assets\Scripts\Singletons\IlluminationPointsCreator.cs" />
     <Compile Include="Assets\Scripts\Singletons\OptimizationParameterManager.cs" />
     <Compile Include="Assets\Scripts\Singletons\ParticleGenerator.cs" />
+    <Compile Include="Assets\Scripts\Singletons\ParticleSimulator.cs" />
     <Compile Include="Assets\Scripts\Singletons\RoadAndLuminaireCreator.cs" />
     <Compile Include="Assets\Scripts\Toggle.cs" />
     <Compile Include="Assets\Scripts\Tooltip.cs" />
